--- a/wordpress/index.html
+++ b/wordpress/index.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <section class="promo">
       <div class="container">
         <div class="logo">
-          <img src="img/promo_logo.png" alt="логотип" class="promo_icon" />
+          <img src="img/promo_logo.png" alt="логотип" class="promo_icon">
           <div class="icon_text">WordPress интенсив</div>
         </div>
 
