--- a/wordpress/index.html
+++ b/wordpress/index.html
@@ -51,14 +51,14 @@
 
       <div class="waiting_content wrapper container">
         <div class="item">
-          <img src="/img/comp_1.png" alt="1" class="item_img" />
+          <img src="img/comp_1.png" alt="1" class="item_img" />
           <div class="item_text">
             Всего за два бесплатных вебинара мы научим вас, как создать свой
             сайт на WordPress.
           </div>
         </div>
         <div class="item">
-          <img src="/img/comp_2.png" alt="2" class="item_img" />
+          <img src="img/comp_2.png" alt="2" class="item_img" />
           <div class="item_text">
             Покажем, как правильно оптимизировать сайт и сделать его
             привлекательным для поисковых систем. Только свежая,
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="/img/comp_3.png" alt="3" class="item_img" />
+          <img src="img/comp_3.png" alt="3" class="item_img" />
           <div class="item_text">
             Вы узнаете, что такое «хорошая индексация», «высокая посещаемость»,
             «стабильный прирост посетителей», «ТОП по запросам» и, что намного
@@ -106,7 +106,7 @@
 
       </div>
       <div class="optimize_bg">
-        <img src="/img/girl_bg.png" alt="girl" />
+        <img src="img/girl_bg.png" alt="girl" />
       </div>
     </section>
 
@@ -118,23 +118,23 @@
 
         <div class="finish_icons">
             <div class="items">
-                <div class="finih_icon_bg"><img src="./icons/1.png" alt="1" class="icon"></div>
+                <div class="finih_icon_bg"><img src="icons/1.png" alt="1" class="icon"></div>
                 <div class="finish_icon_text">Создать свой сайт или блог</div>
             </div>
             <div class="items">
-                <div class="finih_icon_bg"><img src="./icons/2.png" alt="2" class="icon"></div>
+                <div class="finih_icon_bg"><img src="icons/2.png" alt="2" class="icon"></div>
                 <div class="finish_icon_text">Правильно его оптимизировать</div>
             </div>
             <div class="items">
-                <div class="finih_icon_bg"><img src="./icons/3.png" alt="3" class="icon"></div>
+                <div class="finih_icon_bg"><img src="icons/3.png" alt="3" class="icon"></div>
                 <div class="finish_icon_text">Обеспечить ему медленный, но верный рост в ТОП</div>
             </div>
             <div class="items">
-                <div class="finih_icon_bg"><img src="./icons/4.png" alt="4" class="icon"></div>
+                <div class="finih_icon_bg"><img src="icons/4.png" alt="4" class="icon"></div>
                 <div class="finish_icon_text">Достигнуть стабильного прироста посетителей</div>
             </div>
             <div class="items">
-                <div class="finih_icon_bg"><img src="./icons/5.png" alt="5" class="icon"></div>
+                <div class="finih_icon_bg"><img src="icons/5.png" alt="5" class="icon"></div>
                 <div class="finish_icon_text">Получать ощутимую прибыль</div>
             </div>
         </div>
@@ -143,8 +143,8 @@
     <section class="bonus">
         <div class="container">
             <div class="box">
-                <img src="./icons/box1.png" alt="box">
-                <img src="./icons/box2.png" alt="box">
+                <img src="icons/box1.png" alt="box">
+                <img src="icons/box2.png" alt="box">
             </div>
 
             <div class="bonus_text">Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по окончании обучения!</div>
@@ -154,7 +154,7 @@
 
     <section class="vebinar">
         <div class="vebinar_box container">
-            <img src="./icons/comp4.png" alt="комп">
+            <img src="icons/comp4.png" alt="комп">
             <div class="first_vebinar">Первый вебинар состоится:</div>
             <div class="first_vebinar_date">10 сентября в 20:00 по Москве</div>
             <div class="first_vebinar_text">Успейте записаться, количество мест ограничено!</div>
